test/tests/diagnostics/syntax_err01/jastadd.err.expected
Error at tests/diagnostics/syntax_err01/Test.ast:1:10: unexpected token "::=":
Node ::= ::=
         ^^^
